# momo

./: .gitignore  LICENSE  README.md  momo.spec  pyproject.toml  requirements.txt
docs/plan/: plan-MoMo.prompt.md
src/: main.py
src/momo/: __init__.py  app.py  autostart.py  dialogs.py  idle_detector.py  mouse_mover.py  schedule.py  settings.py  tray_icon.py
tests/: __init__.py  test_app.py  test_idle_detector.py  test_schedule.py  test_settings.py
