[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momo"
version = "1.0.0"
description = "A lightweight Windows utility to prevent system idle timeout"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bret Stateham"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["windows", "idle", "mouse", "teams", "utility"]
dependencies = [
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
momo = "momo.app:main"

[project.urls]
Homepage = "https://github.com/bretstateham/momo"
Repository = "https://github.com/bretstateham/momo"
Issues = "https://github.com/bretstateham/momo/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
